meta descr updated

--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/images/sakiLogo-circle.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+   <meta name="description" content="Welcome to Saki Royals FC, a soccer club dedicated to promoting the beautiful game. Learn about our team, our mission, and our values, and get in touch with us to join our community.">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/sakiLogo-circle.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
